syntax = "proto3";
package authentication;

service Auth {
    rpc Login (LoginRequest) returns (Token);
    rpc Register (RegisterRequest) returns (Token);
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message RegisterRequest {
    string firstname = 1;
    string lastname = 2;
    string username = 3;
    string email = 4;
    string password = 5;
}

message Token {
    string access_token = 1;
}
